# project-karma

./: .gitignore  l.json  main.py  new.py  personal_model.py  pyproject.toml  test.py
app/: personal_agent.py  personal_assistant.py  vector_db.py
app/access/: tools.py
app/agentic_mode/: personal_agent.py  personal_assistant.py  personal_model.py  raw_model.py
app/tools/: retrieval_tool.py  update_memory.py
app/types/: local_types.py
app/utils/: local_types.py  loger_config.py  memory_management.py  vector_db.py
app/utils/schemas/: response_schema.py  tools_schema.py
